--- a/stories/templates/stories/story_list.html
+++ b/stories/templates/stories/story_list.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 
-<p>Här ska meddelandet visas och kommer från index.html:{{ message }}</p>
+<p>Gör en ändring för DEBUG FAlse</p>
+
+<p>Här ska stories visas:</p>
 
 {% for story in story_list %}
 
