--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% url 'share_story' as share_url %}
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
@@ -33,7 +34,7 @@
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
+            <a class="nav-link {% if request.path == share_story.url %}active{% endif %}" aria-current="page"
               href="#">Share Story</a>
           </li>
           <li class="nav-item">
