--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,6 @@
-{% url 'share_story' as share_url %}
+{% url 'home' as home_url %}
+{% url 'about' as about_url %}
+{% url 'share' as share_url %}
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
@@ -27,15 +29,17 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
+              href="{% url 'home' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link {% if request.path == about_url %}active{% endif %}" aria-current="page"
+              href="#">About</a>
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link {% if request.path == share_story.url %}active{% endif %}" aria-current="page"
-              href="#">Share Story</a>
+            <a class="nav-link {% if request.path == share_url %}active{% endif %}" aria-current="page"
+              href="{% url 'share' %}">Share Story</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
