Change name from story_list.html to index.html

--- a/stories/templates/stories/index.html
+++ b/stories/templates/stories/index.html
@@ -17,7 +17,7 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <h2 class="card-title">{{ story.title }}</h2>
-                            <p class="card-text">{{ story.content }}</p>
+                            <p class="card-text">{{ story.excerpt }}</p>
                         </div>
                     </div>
                 </div>
