--- a/stories/templates/stories/story_detail.html
+++ b/stories/templates/stories/story_detail.html
@@ -5,9 +5,21 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
-            <!-- Story title goes in these h1 tags -->
-            <h1 class="story-title">{{ story.title }}</h1>
+        <div class="col-md-6 mt-4">
+            <!-- Story title goes in these h3 tags -->
+            <h3 class="story-title">"{{ story.title }}" by {{ story.author }}</h3>
+            <p>
+                {{ story.excerpt | safe }}
+            </p>
+            <p class="card-text">
+                {{ story.content | safe }}
+            </p>
+        </div>
+        <div class="col-md-6 mt-4">
+            <h3 class="story-title">Comments</h3>
+            <p class="card-text">
+                Här ska kommentarrutan vara 
+            </p>
         </div>
     </div>
 </div>
