--- a/stories/templates/stories/share_story.html
+++ b/stories/templates/stories/share_story.html
@@ -1,17 +1,34 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% load static %}
 
 {% block content %}
 
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-12 col-md-6 my-5">
+<div class="container">
+    <div class="row">
+        <div class="col">
             <h1>Share your Story!</h1>
             <form method="post">
                 {{ share_form | crispy }}
                 {% csrf_token %}
                 <button type="submit" , name="save">Create New</button>
             </form>
+        </div>
+        <div class="col">
+            <h1>My stories</h1>
+            {% for story in my_stories %}
+            {% if story.author == user %}
+            <div class="col-md-6">
+                <div class="card mb-4">
+                    <div class="card-body">
+                            <h2 class="card-title">{{ story.title }} | {{ story.author }}</h2>
+                            <p class="card-text">{{ story.excerpt }}</p>
+                            <p class="card-text">{{ story.content }}</p>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            {% endfor %}
         </div>
     </div>
 </div>
