--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if request.path == about_url %}active{% endif %}" aria-current="page"
-              href="#">About</a>
+              href="{% url 'about' %}">About</a>
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
