Install Summernote for About page

--- a/stories/templates/stories/about.html
+++ b/stories/templates/stories/about.html
@@ -7,8 +7,10 @@
 
 <div class="container mt-5">
     <div class="row">
-        <h2>{{ about.title }}</h2>
-        {{ about.content | safe }}
+        <div class="col-12 col-md-8">
+            <h2>{{ about.title }}</h2>
+            {{ about.content | safe }}
+        </div>
     </div>
 </div>
 
