--- a/stories/templates/stories/story_detail.html
+++ b/stories/templates/stories/story_detail.html
@@ -15,11 +15,21 @@
                 {{ story.content | safe }}
             </p>
         </div>
-        <div class="col-md-6 mt-4">
-            <h3 class="story-title">Comments</h3>
-            <p class="card-text">
-                Här ska kommentarrutan vara 
-            </p>
+        <!-- Creating New Comments -->
+        <div class="col-md-4 card mb-4 mt-3">
+            <div class="card-body">
+                {% if user.is_authenticated %}
+                <h3>Leave a comment:</h3>
+                <p>Posting as: {{ user.username }}</p>
+                <form id="commentForm" method="post" style="margin-top: 1.3em;">
+                    {{ comment_form | crispy }}
+                    {% csrf_token %}
+                    <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
+                </form>
+                {% else %}
+                <p>Log in to leave a comment</p>
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
