--- a/stories/templates/stories/index.html
+++ b/stories/templates/stories/index.html
@@ -16,7 +16,7 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <a href="{% url 'story_detail' story.slug %}" class="post-link">
+                            <a href="{% url 'story_detail' story.slug %}" class="story-link">
                                 <h2 class="card-title">{{ story.title }} | {{ story.author }}</h2>
                                 <p class="card-text">{{ story.excerpt }}</p>
                             </a>
@@ -30,12 +30,12 @@
     <ul class="pagination justify-content-center">
         {% if page_obj.has_previous %}
         <li>
-            <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
+            <a href="?page={{ page_obj.previous_page_number }}" class="story-link">&laquo; PREV</a>
         </li>
         {% endif %}
         {% if page_obj.has_next %}
         <li>
-            <a href="?page={{ page_obj.next_page_number }}" class="page-link">NEXT &raquo;</a>
+            <a href="?page={{ page_obj.next_page_number }}" class="story-link">NEXT &raquo;</a>
         </li>
         {% endif %}
     </ul>
