--- a/stories/templates/stories/share_story.html
+++ b/stories/templates/stories/share_story.html
@@ -7,11 +7,10 @@
 <!-- share_story.html content starts here -->
 <div class="container-fluid">
   <div class="row">
-
-    <div class="col-12 mt-3 left ">
+    <div class="col-12">
       <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-5">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-5">
           <!-- Share your Story -->
           <h1>Share your Story!</h1>
           <form id="storyForm" method="post">
@@ -23,7 +22,7 @@
             </div>
           </form>
         </div>
-        <div class="col-md-5">
+        <div class="col-lg-5 col-md-6">
           <!-- My Stories -->
           <h1>My stories</h1>
           {% for story in my_stories %}
@@ -32,8 +31,8 @@
             <div class="card mb-2">
               <div class="card-body">
                 <h2 id="story{{ story.id }}" class="card-title">{{ story.title }} | {{ story.author }}</h2>
-                <p class="card-text">{{ story.excerpt }}</p>
-                <p id="story{{ story.id }}" class="card-text">{{ story.content }}</p>
+                <p id="storyExcerpt{{ story.id }}" class="card-text">{{ story.excerpt }}</p>
+                <p id="storyContent{{ story.id }}" class="card-text">{{ story.content }}</p>
               </div>
             </div>
             <div class="mb-4 text-center">
@@ -44,7 +43,7 @@
           {% endif %}
           {% endfor %}
         </div>
-        <div class="col-md-1"></div>
+        <div class="col-lg-1"></div>
       </div>
     </div>
   </div>
