--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,6 +1,18 @@
 body {
-    background-color: aquamarine;
+    background-color: #ADD3E6;
 }
+
+.poetsen-one-regular {
+    font-family: "Poetsen One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}  
+
+.lato-black-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
 
 
 .story-link {
