Remove forgot password btn

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,10 @@ body {
     color: #062D46;
 }
 
+.pag-link {
+    color: white;
+}
+
 .button {
     background-color: #6B9776;
     border: none;
