--- a/stories/templates/stories/story_detail.html
+++ b/stories/templates/stories/story_detail.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6 mt-4">
+        <div class="col-md-7 mt-4">
             <!-- Story title goes in these h3 tags -->
             <h3 class="story-title">"{{ story.title }}" by {{ story.author }}</h3>
             <p>
@@ -16,6 +16,7 @@
                 {{ story.content | safe }}
             </p>
         </div>
+        <div class="col-md-1"></div>
         <!-- Creating New Comments -->
         <div class="col-md-4 card mb-4 mt-3">
             <div class="card-body">
