Style My Stories section

--- a/stories/templates/stories/share_story.html
+++ b/stories/templates/stories/share_story.html
@@ -17,7 +17,7 @@
             {{ share_form | crispy }}
             {% csrf_token %}
             <div class="text-center">
-              <button id="submitButton" type="submit" class="btn btn-signup btn-lg btn-success">
+              <button id="submitButton" type="submit" class="button">
                 Save</button>
             </div>
           </form>
