Create footer in base.html

--- a/stories/templates/stories/share_story.html
+++ b/stories/templates/stories/share_story.html
@@ -22,7 +22,7 @@
             </div>
           </form>
         </div>
-        <div class="col-lg-5 col-md-6">
+        <div class="col-lg-5">
           <!-- My Stories -->
           <h1>My stories</h1>
           {% for story in my_stories %}
