--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+   <!-- Font Awesome CSS -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -92,6 +94,20 @@
     {% endblock content %}
 
   </main>
+
+  <!-- Footer -->
+  <footer class="footer mt-auto py-3 dark-bg">
+    <p class="m-0 text-center text-white">
+      {% block copyright %}
+      copyright Sofia Nordström
+      {% endblock copyright %}
+    </p>
+    <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
+      <i class="fab fa-twitter-square ms-3"></i>
+      <i class="fab fa-instagram-square ms-3"></i>
+      <i class="fab fa-youtube-square ms-3"></i>
+    </p>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
