--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,21 @@
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+#content-wrap {
+    padding-bottom: 70px;    /* Footer height */
+  }
+
 body {
     background-color: #ADD3E6;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
 }
 
 .poetsen-one-regular {
