--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light lato-bold-italic">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Running Stories</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Running Stories</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
