Add links to social-icons

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,10 +107,19 @@
         copyright Sofia Nordström
         {% endblock copyright %}
       </p>
-      <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
-        <i class="fab fa-twitter-square ms-3"></i>
-        <i class="fab fa-instagram-square ms-3"></i>
-        <i class="fab fa-youtube-square ms-3"></i>
+      <p class="m-0 text-center text-white">Follow us: 
+        <a href="https://facebook.com" target="_blank" rel="noopener" 
+        aria-label="Visit our Facebook page (opens in a new tab)">
+        <i class="fab fa-facebook-square ms-3 social-icons"></i></a>
+        <a href="https://x.com/" target="_blank" rel="noopener" 
+        aria-label="Visit our X page (opens in a new tab)">
+        <i class="fab fa-twitter-square ms-3 social-icons"></i></a>
+        <a href="https://instagram.com/" target="_blank" rel="noopener" 
+        aria-label="Visit our Instagram page (opens in a new tab)">
+        <i class="fab fa-instagram-square ms-3 social-icons"></i></a>
+        <a href="https://youtube.com/" target="_blank" rel="noopener" 
+        aria-label="Visit our Youtube channel (opens in a new tab)">
+        <i class="fab fa-youtube-square ms-3 social-icons"></i></a>
       </p>
     </footer>
 
