--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
     <footer id="footer" class="footer mt-auto py-3 dark-bg">
       <p class="m-0 text-center text-white">
         {% block copyright %}
-        copyright Sofia Nordström
+        Copyright: Sofia Nordström
         {% endblock copyright %}
       </p>
       <p class="m-0 text-center text-white">Follow us: 
