Remove author from My Stories

--- a/stories/templates/stories/share_story.html
+++ b/stories/templates/stories/share_story.html
@@ -30,7 +30,7 @@
           <div>
             <div class="card mb-2">
               <div class="card-body">
-                <h2 id="story{{ story.id }}" class="card-title">{{ story.title }} | {{ story.author }}</h2>
+                <h2 id="story{{ story.id }}" class="card-title">{{ story.title }}</h2>
                 <p id="storyExcerpt{{ story.id }}" class="card-text">{{ story.excerpt }}</p>
                 <p id="storyContent{{ story.id }}" class="card-text">{{ story.content }}</p>
               </div>
