--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,5 +1,21 @@
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+#content-wrap {
+    padding-bottom: 70px;    /* Footer height */
+  }
+
 body {
     background-color: #ADD3E6;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
 }
 
 .poetsen-one-regular {
@@ -20,7 +36,7 @@ body {
     color: #062D46;
 }
 
-#pag-button {
+.pag-link {
     color: white;
 }
 
@@ -35,4 +51,8 @@ body {
     font-size: 20px;
     border-radius: 4px;
     margin-right: 10px;
+  }
+
+  .social-icons {
+    color: white;
   }
