--- a/stories/templates/stories/share_story.html
+++ b/stories/templates/stories/share_story.html
@@ -73,9 +73,10 @@
       </div>
     </div>
   </div>
+</div>
 
-  {% endblock %}
+{% endblock %}
 
-  {% block extras %}
-  <script src="{% static 'js/stories.js' %}"></script>
-  {% endblock %}
+{% block extras %}
+<script src="{% static 'js/stories.js' %}"></script>
+{% endblock %}
