Fix Html Checker errors in share_story.html

--- a/stories/templates/stories/share_story.html
+++ b/stories/templates/stories/share_story.html
@@ -42,8 +42,8 @@
               </div>
             </div>
             <div class="mb-4 text-center">
-              <button class="btn btn-delete btn-danger" story_id="{{ story.id }}">Delete</button>
-              <button class="btn btn-edit btn-secondary" story_id="{{ story.id }}">Edit</button>
+              <button class="btn btn-delete btn-danger" data-story_id="{{ story.id }}">Delete</button>
+              <button class="btn btn-edit btn-secondary" data-story_id="{{ story.id }}">Edit</button>
             </div>
           </div>
           {% endif %}
