--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,43 +1,7 @@
-#page-container {
-    position: relative;
-    min-height: 100vh;
-}
-
-#content-wrap {
-    padding-bottom: 70px;    /* Footer height */
-  }
+/* General styles */
 
 body {
     background-color: #ADD3E6;
-}
-
-#footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 70px;
-}
-
-.poetsen-one-regular {
-    font-family: "Poetsen One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}  
-
-.lato-black-italic {
-    font-family: "Lato", sans-serif;
-    font-weight: 900;
-    font-style: italic;
-  }
-
-
-.story-link {
-    text-decoration: none;
-    color: #062D46;
-}
-
-.pag-link {
-    color: white;
 }
 
 .button {
@@ -51,8 +15,35 @@ body {
     font-size: 20px;
     border-radius: 4px;
     margin-right: 10px;
+}
+
+.story-link {
+    text-decoration: none;
+    color: #062D46;
+}
+
+.pag-link {
+    color: white;
+}
+
+.social-icons {
+    color: white;
+}
+
+/* How to keep your footer where it belongs */
+
+#page-container {   
+    position: relative; /* This is the reference point to the footer */
+    min-height: 100vh; /* The element will always be at least as high as the whole window */
+}
+
+#content-wrap {
+    padding-bottom: 70px; /* Footer height */
   }
 
-  .social-icons {
-    color: white;
-  }
+#footer {   
+    position: absolute; /* The element will be absolutely positioned in relation to its closest parent element */
+    bottom: 0; /* Keep the footer at the bottom of the page */
+    width: 100%; /* The footer will extend across the full width of the page */
+    height: 70px; /* Footer height */
+}
