Add comments to html templates

--- a/stories/templates/stories/about.html
+++ b/stories/templates/stories/about.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
+<!-- This block contains the main content -->
 <div class="container mt-5">
     <div class="row">
         <div class="col-12 col-md-8">
@@ -13,7 +13,5 @@
         </div>
     </div>
 </div>
-
-
-
+<!-- End of main content block -->
 {% endblock %}
