--- a/stories/templates/stories/story_detail.html
+++ b/stories/templates/stories/story_detail.html
@@ -53,8 +53,8 @@
                         </div>
                         {% if user.is_authenticated and comment.author == user %}
                         <!-- Buttons for deleting and editing comments -->
-                        <button class="btn btn-delete btn-danger" comment_id="{{ comment.id }}">Delete</button>
-                        <button class="btn btn-edit btn-secondary" comment_id="{{ comment.id }}">Edit</button>
+                        <button class="btn btn-delete btn-danger" data-comment_id="{{ comment.id }}">Delete</button>
+                        <button class="btn btn-edit btn-secondary" data-comment_id="{{ comment.id }}">Edit</button>
                         {% endif %}
                     </div>
                     {% endfor %}
